--- a/index.htm
+++ b/index.htm
@@ -45,7 +45,7 @@
                     document.body.innerHTML += '<p>Email verified successfully. You may now close this window or <a href="https://previewer.adalo.com/93972dbb-a376-485d-a68d-4609e648c649?sessionToken=eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjgyNDc1MCwiZW1haWwiOiJwZXRlci5zYWZmYXJpYW5AZ21haWwuY29tIiwiZGV2ZWxvcGVyIjp0cnVlLCJpYXQiOjE3MTA0NzA2OTEsImV4cCI6MTcxMzA2MjY5MX0.qAaLYGPHSQfwx714oCHcwceq9Jw0C35BA-K4SaeJ_PhsNYy7VKsUwb3NZqByRWqFytJri7oMTOgVamBFtNDLRAxp4vpRUfHs4nEIf4sgz4n6PHghIVTsoH31bfYQmMBBhyVwN1KZnujVRJf4myMzakOR1b5W12G61EvTkfksKhb_rzhXKV4pyZyewlH6SklkbDaCxPDw8WSrtifURMEmSpmMkBSWIPArIQPAniAqiIWK8TSNSfx47XpzAf0-s9N68heQwSPLzgJoahB0KX7gvJW-kRLPqK2OU59UUa27LfV1Z77yJA6o3TMesWWGS9Da2kIz4X17uxyx_XnCK_vvcQ&_gl=1%2A1cagy57%2A_ga%2AMjA2NTk0Mzc0Ny4xNjg5NTkyNTA3%2A_ga_SWT45DV35L%2AMTcxMDQ3MDE1Ni4yMTkuMS4xNzEwNDcyMzg2LjQ3LjAuMA..&target=818468a1bfad492599706dafa106d579&params=%7B%7D">return to Hypha</a>.</p>';
                 }).catch((error) => {
                     console.error('Verification error:', error);
-                    document.body.innerHTML += '<p>There was a problem verifying your email. <a href= "mailto:info@hypha.co.nz;>Please contact support</a>.</p>';
+                    document.body.innerHTML += '<p>There was a problem verifying your email. <a href="mailto:info@hypha.co.nz">Please contact support</a>.</p>';
                 });
             } else {
                 document.body.innerHTML += '<p>Verification code is missing.</p>';
