--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>Thank you for joining Hypha</h1>
+    <br><br><h1>Thank you for joining Hypha</h1><br>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const params = new URLSearchParams(window.location.search);
