--- a/index.htm
+++ b/index.htm
@@ -14,14 +14,15 @@
         
         a, button {
             font-family: 'Roboto', sans-serif;
-            background-color: #0D1216;
-            color: #F0F0F0;
+            background-color: #F0F0F0;
+            color: #0D1216;
             padding: 10px 20px;
             text-decoration: none;
             border: none;
             border-radius: 0px;
             transition: background-color 0.3s, color 0.3s;
         }
+
         a:hover, button:hover, a:active, button:active {
             background-color: #0040FF;
             color: #F0F0F0;
@@ -30,37 +31,26 @@
     </style>
 </head>
 <body>
-    <br><br><h1>Thank you for joining Hypha</h1><br>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-    const params = new URLSearchParams(window.location.search);
-    const uuid = params.get('uuid');
-    if (uuid) {
-        fetch('https://hooks.zapier.com/hooks/catch/16360223/30ci1xe/', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json', // This tells the server that you're sending JSON
-            },
-            body: JSON.stringify({
-                uuid: uuid // Your UUID data
-            })
-        })
-        .then(response => response.json())
-        .then(data => {
-            console.log('Success:', data);
-            // Success feedback for user
-            document.body.innerHTML += '<p>Email verified successfully. You may now close this window or return to the app.</p>';
-        })
-        .catch((error) => {
-            console.error('Error:', error);
-            // Error feedback for user
-            document.body.innerHTML += '<p>There was a problem verifying your email. Please contact support.</p>';
+    <h1>Thank you for joining Hypha</h1>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const params = new URLSearchParams(window.location.search);
+            const uuid = params.get('uuid');
+            if (uuid) {
+                fetch('https://hooks.zapier.com/hooks/catch/16360223/30ci1xe/', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ uuid: uuid })
+                }).then(() => {
+                    document.body.innerHTML += '<p>Email verified successfully. You may now close this window or <a href="https://previewer.adalo.com/93972dbb-a376-485d-a68d-4609e648c649?sessionToken=eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjgyNDc1MCwiZW1haWwiOiJwZXRlci5zYWZmYXJpYW5AZ21haWwuY29tIiwiZGV2ZWxvcGVyIjp0cnVlLCJpYXQiOjE3MTA0NzA2OTEsImV4cCI6MTcxMzA2MjY5MX0.qAaLYGPHSQfwx714oCHcwceq9Jw0C35BA-K4SaeJ_PhsNYy7VKsUwb3NZqByRWqFytJri7oMTOgVamBFtNDLRAxp4vpRUfHs4nEIf4sgz4n6PHghIVTsoH31bfYQmMBBhyVwN1KZnujVRJf4myMzakOR1b5W12G61EvTkfksKhb_rzhXKV4pyZyewlH6SklkbDaCxPDw8WSrtifURMEmSpmMkBSWIPArIQPAniAqiIWK8TSNSfx47XpzAf0-s9N68heQwSPLzgJoahB0KX7gvJW-kRLPqK2OU59UUa27LfV1Z77yJA6o3TMesWWGS9Da2kIz4X17uxyx_XnCK_vvcQ&_gl=1%2A1cagy57%2A_ga%2AMjA2NTk0Mzc0Ny4xNjg5NTkyNTA3%2A_ga_SWT45DV35L%2AMTcxMDQ3MDE1Ni4yMTkuMS4xNzEwNDcyMzg2LjQ3LjAuMA..&target=818468a1bfad492599706dafa106d579&params=%7B%7D">return to Hypha</a>.</p>';
+                }).catch((error) => {
+                    console.error('Verification error:', error);
+                    document.body.innerHTML += '<p>There was a problem verifying your email. <a href="mailto:info@hypha.co.nz">Please contact support</a>.</p>';
+                });
+            } else {
+                document.body.innerHTML += '<p>Verification code is missing.</p>';
+            }
         });
-    } else {
-        document.body.innerHTML += '<p>Verification code is missing.</p>';
-    }
-});
-</script>
-
+    </script>
 </body>
 </html>
